<resources>
    <string name="app_name">PaymentMethods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_email">Nuevo Email</string>
    <string name="password">Contraseña</string>
    <string name="account">Registrarse</string>
    <string name="create_account">Crear Usuario</string>
    <string name="input_your_email">Ingrese su email</string>
    <string name="create_password">Ingrese una contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="title_new_card">agregar tarjeta</string>
    <string name="title_qr_payment">pagar con qr</string>
    <string name="saldo_xxx">Saldo: xxxxxxxx xxxx</string>
    <string name="american_exppres">American Exppres</string>
    <string name="hiden_numbers">xxxx xxxx xxxx 1234</string>
    <string name="vence">Vence --/--</string>
    <string name="security_code">    123</string>
    <string name="full_name">Nombre completo</string>
    <string name="add_new_card">Agregar Tarjeta</string>
    <string name="insert_card_data">Ingresa los datos de la tarjeta que quieras adherir</string>
    <string name="person_name">Nombre y apellido</string>
    <string name="difrent_names">El nombre de la Tarjeta no coincide con el Nombre del Usuario</string>
    <string name="empty_values">No deben quedar campos vacios</string>
    <string name="pay_nfc">Pagar Con NFC</string>
    <string name="image">image</string>
</resources>